# AgroSense

./: .gitignore  README.md  main.py  pyproject.toml
AgroSense_Firmware/: AgroSense_Firmware.ino
Agrosense_firmware/: Agrosense_firmware.ino
pages/: __init__.py  configuration.py  connection.py  dashboard.py  fincas.py  history.py  save.py
scripts/: build_ble_apk.sh
services/: __init__.py  ble_service.py  db_service.py
